# okeanus

./: .env.example  .gitignore  Dockerfile  HANDOVER.md  README.md  SCRATCHPAD.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: SCRATCHPAD.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
dashboard/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  react-loadable-manifest.json  required-server-files.json  routes-manifest.json  trace
dashboard/.next/cache/: .rscinfo  .tsbuildinfo
dashboard/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-react-loadable-manifest.js  server-reference-manifest.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: DecisionTree.tsx
dashboard/src/lib/: api.ts  store.ts  utils.ts
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_economy_entities.py  003_geofence_tables.py  004_intelligence_layer.py  005_insight_feedback.py  006_embedding_768.py  007_alerts_table.py  007_lineage_tables.py  008_merge_alerts_lineage.py
scripts/: batch_ingest.py  ingest_all.py  ingest_one.py  promote_observations.py  retry_remaining.py  run_ml_pipeline.py  seed_data.py  seed_demo.py
src/okeanus/: __init__.py  config.py  main.py
src/okeanus/adapters/: __init__.py  acled_maritime.py  ais_hub.py  ais_stream.py  allen_coral.py  argopy_adapter.py  argovis.py  aviso_altimetry.py  barentswatch.py  base.py  boem_offshore.py  boem_wind.py  bold.py  bsee_spills.py  bunker_index.py  ccamlr.py  cchdo_goship.py  clav_iuu.py  climate_indices.py  cmems.py  copernicus_dataspace.py  coral_bleaching.py  cpr_survey.py  crown_estate.py  earthaccess_adapter.py  ebird_marine.py  ecfr.py  ecmwf_open.py  eia_offshore.py  emodnet_bathymetry.py  emodnet_biology.py  emodnet_human.py  emodnet_seabed.py  en4_subsurface.py  erddap.py  erddap_presets.py  esvd.py  eu_blue_economy.py  eumofa.py  eurostat_blue.py  (+108 more)
src/okeanus/api/: __init__.py  alerts.py  analytics.py  behavioral.py  dashboard.py  economy.py  geospatial.py  health.py  ingest.py  investigate.py  (+7 more)
tests/: conftest.py  test_adapters.py  test_economy_api.py  test_health.py  test_transform.py
(+176 files in other folders)
