[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okeanus"
version = "0.1.0"
description = "Unified Ocean Intelligence Platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "geoalchemy2",
    "alembic",
    "duckdb",
    "httpx",
    "click",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "geojson-pydantic",
    "shapely",
    "redis[hiredis]",
    "websockets",
    "sse-starlette",
    "PyJWT>=2.8",
    "passlib[bcrypt]>=1.7",
    "scrapling",
]

[project.optional-dependencies]
ml = [
    "anthropic>=0.40",
    "sentence-transformers>=3.0",
    "pgvector>=0.3",
    "scikit-learn>=1.5",
    "scipy>=1.10",
    "networkx>=3.0",
]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
okeanus = "okeanus.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
